--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,159 @@
+
+  @import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Poppins:wght@400;500;600&display=swap');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Poppins', sans-serif;
+  background: #FFFFFF;
+  
+}
+li, a{
+  text-decoration: none;
+  color: #8A8888;
+
+}
+.header{
+  margin: 0%;
+  border: 1px solid #F3EDED;
+
+}
+nav{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  margin: 15px 165px 15px 165px;
+  
+}
+ nav ul li{
+  list-style-type: none;
+  display: inline;
+  padding: auto;
+  
+}
+nav ul li span{
+  margin: 0px 40px;
+}
+nav ul{
+  margin-bottom: 0%;
+}
+li img{
+  padding-left: 22px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.active{
+  color: #86BE3F
 }
+.btn-green{
+  background: #86BE3F;
+  font-family: 'Inter', sans-serif; 
+  color: #FFFFFF;
+  font-family: 'Inter', sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  padding: 14px 22px 14px 22px;
+  border-radius: 7px;
+  border: none;
+
+
+}
+.menu-bar ul li {
+  list-style-type: none;
+  display: inline;
+
+}
+.menu-bar ul{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  margin: 25px 165px 19px 165px;
+}
+.menu-bar ul{
+  padding: 0%;
+}
+/* =======header end================= */
+
+.containerr {
+  position: relative;
+  text-align: center;
+  color: white;
+}
+.centered {
+  position: absolute;
+  width: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.centered h1{
+  font-weight: 700;
+  font-size: 64px;
+}
+.centered p{
+  font-weight: 500;
+  font-size: 24px;
+}
+
+/* ======hero end==================== */
+
+.about-heading{
+  margin-top: 80px;
+  text-align: center;
+  color: #363636;
+}
+.about-hr{
+  border: 3px solid #86BE3F;
+  width:131px;
+  border-radius: 4px;
+  margin: 25px auto;
+
+
+}
+.about-heading h1{
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 36px;
+}
+
+.frame-top-left{
+  padding-right: 6px;
+  transform: translate(-50%, -165%);
+}
+
+.container-1{
+  display: flex !important;
+  justify-content: space-between!important;
+    
+}
+.box{
+  background: #F8F8F8;
+  border-radius: 6px;
+  width: 32%;
+  padding: 18px;
+   text-align: center;
+   height: 277px;
+
+
+}
+.box h3{
+  margin-top: 17px;
+   font-weight: 500;
+   text-align: center;
+   font-size: 20px;
+   color: #363636;
+
+  }
+  .box p{
+     font-weight: 400;
+     font-size: 14px;
+     color: #666666;
+    }
+    .box-img{
+      width: 183px;
+      height: 174px;
+      margin-top: -92px;
+
+    }
+
+    /* ===========About end================== */
