--- a/src/index.css
+++ b/src/index.css
@@ -409,4 +409,37 @@ text-align: center;
     align-items: last baseline;
 }
 
+/* ============end benefits============== */
 
+.textt{
+  margin: 24px;
+  color: #666666;
+
+}
+.textt h3{
+font-family: 'Inter';
+font-weight: 500;
+font-size: 16px;
+color: #363636;
+}
+.offer{
+  background: #FFFFFF;
+  box-shadow: 0px 0px 14px rgba(0, 0, 0, 0.1);
+  margin-bottom: 24px;
+}
+.options div{
+  background-color: #F5F5F5;
+  border-radius: 50%;
+  height: 61px;
+  width: 61px;
+  padding:9px;}
+
+.options{
+  display: flex;
+}
+.options p{
+  margin-top: 19px;
+}
+.offers{
+  display: flex;
+}
