--- a/src/index.css
+++ b/src/index.css
@@ -442,7 +442,7 @@ flex-direction: column;
   margin: 18px 58px 18px 0px;
   padding:11px;}
 
-.options, .icons, .offers, .list div{
+.options, .icons, .offers, .list div, .bx{
   display: flex;
 }
 .option p{
@@ -465,4 +465,48 @@ flex-direction: column;
 }
 .hea {
 margin-top: 34px;
+}
+
+.heading_with_arrow{
+  display: flex;
+justify-content: space-between;
+padding-right: 24px;
+}
+/* ===============Offer end======================= */
+#process{
+  background: url('../public/images/Connettiti al sole anche tu-bg.png');
+  padding: 3px;
+}
+.b{
+  position: relative;
+  text-align: center;
+}
+.bb {
+  position: absolute;
+  width: 227px;
+  height: 230px;
+  top: 50%;
+  left: 39%;
+  border-radius: 5px;
+  transform: translate(-50%, -50%);
+}
+.bttn{
+  text-align: center;
+  margin: 50px;
+}
+.bbb{
+  top: 50%;
+  left: 44%;
+margin-right: 12px;
+}
+.short_detaail{
+  font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 14px;
+color: #666666;
+margin: 14px ;
+}
+.ccard img{
+  margin: 28px auto;
 }
