--- a/src/index.css
+++ b/src/index.css
@@ -442,7 +442,7 @@ flex-direction: column;
   margin: 18px 58px 18px 0px;
   padding:11px;}
 
-.options, .icons, .offers, .list div, .bx, .qus, .contactdetail, .contct , .contactus, .contactus_form{
+.options, .icons, .offers, .list div, .bx, .qus, .contactdetail, .contct ,.social-link, .contactus, .contactus_form, .foter, .flexnewsletter{
   display: flex;
 }
 .option p{
@@ -573,4 +573,86 @@ input, textarea{
 }
 textarea{
   min-height: 115px;
+}
+/* ===========end Contactus================== */
+.newsletterr{
+  background: url(../public/images/news-letter-bg.png);
+  color: #FFFFFF;
+  height: 134px;
+}
+.flexnewsletter{
+  justify-content: space-between;
+  width: 78%;
+  padding-top: 25px;
+
+}
+.subscribe{
+ margin-left: -25px;
+  float: left;
+}
+.insert_email input{
+  position: relative;
+  width: 427px;
+  height: 55px;
+  border: none;
+  border-radius: 27px;
+}
+.insert_email{
+  position: relative;
+
+} .mail_box {
+  background-color:#86BE3F;
+  padding: 9px;
+  width: 42px;text-align: center;
+  position: absolute;
+  border-radius: 50%;
+  bottom:  46%;
+  right: 4%;
+}
+/* ============end newsletter================= */
+
+.footeer{
+  background: url(../public/images/footer-bg.png);
+  background-color: #1E1E1E;
+  color: #FFFFFF;
+  padding-top: 61px;
+  font-weight: 600;
+}
+.foter{
+  justify-content: space-between;
+  padding: 1px;
+}
+.flex1, .flex4{
+  max-width: 274px;
+}
+.flex2, .flex4{
+  margin: 15px 0px 15px 72px;
+}
+.flex2 h1, .flex4 h1, .flex2 h2, .flex4 h2{
+  margin: 13px;
+}
+.flex2 div{
+  margin-top: 51px;
+}
+.footer-row h2{
+ margin: 26px 0px;
+}
+.footeer h1{
+  font-weight: 600;
+  line-height: 95.52%;
+  font-size: 16px;
+}
+.footeer h2{
+  font-weight: 400;
+  line-height: 133.52%;
+  font-size: 16px;
+}
+.repeat_logo img{
+margin:0px 12px 0px 0px;
+}
+.social-link{
+  justify-content: space-between;
+}
+.reserved,  .socials img{
+padding: 18px;
 }
