completed after responsive work

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ li, a{
 
 }
 .header{
-  height: 81px;
+  /* height: 81px; */
   margin: 0%;
   border: 1px solid #F3EDED;
 
@@ -26,7 +26,7 @@ nav{
   margin: 15px 165px 15px 165px;
   
 }
-#myDiv{
+/* #myDiv{
   display: flex; background: #FFFFFF;
   justify-content: center;
   transition: opacity 0.3s ease; 
@@ -35,7 +35,7 @@ nav{
   opacity: 0;
   height: 0;
   overflow: hidden;
-}
+} */
  nav ul li{
   list-style-type: none;
   display: inline;
@@ -70,7 +70,12 @@ li img{
 }
 /* =========================== */
 
-
+.nav-menu {
+  display: flex;
+}
+.menu-bar ul li a:hover{
+  color: #86BE3F
+}
 
 .nav-bar{
   background: #FFFFFF;
@@ -87,10 +92,7 @@ li img{
 .menu-bar {
   background-color:#FFFFFF ;
   position: fixed;
-  top: 11%;
   width: 100%;
-  height: 60px;
-  /* background: linear-gradient(45deg, rgb(156, 14, 156), midnightblue); */
 }
 
 .mobile{
@@ -100,8 +102,6 @@ li img{
 .btn_icon {
   display: none;
   position: absolute;
-  right: 10px;
-  top: 7px;
   
 }
 .menu-bar ul li {
@@ -180,7 +180,7 @@ li img{
 .box{
   background: #F8F8F8;
   border-radius: 6px;
-  width: 32%;
+  max-width: 357px;
   padding: 8px;
    text-align: center;
    height: 297px;
@@ -240,7 +240,9 @@ li img{
 }
 .box-1{
   position: relative;
-  width: 5%;
+  /* width: 5%; */
+  /* width: auto; */
+  min-width: 89px;
   top: 0;
   left: 0;
   flex-wrap: wrap;
@@ -429,7 +431,8 @@ text-align: center;
     background: #FFFFFF;
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.12);
     border-radius: 6px;
-    width: 255px;
+    max-width: 255px;
+    min-width: 255px;
     height: 147.9px;
     text-transform: uppercase;
     padding: 24px;
@@ -503,6 +506,7 @@ padding-right: 24px;
 #process{
   background: url('../public/images/Connettiti al sole anche tu-bg.png');
   padding: 3px;
+  width: auto;
 }
 .b{
   position: relative;
@@ -562,7 +566,7 @@ border-radius: 6px;
 .contactdetail, input, textarea{
   padding: 24px;
   flex-direction: column;
-  width: 34%;
+  width: 361px;
   border: 1px solid #DEDEDE;
   border-radius: 9px;
   margin: 15px;
@@ -609,7 +613,7 @@ textarea{
 }
 .flexnewsletter{
   justify-content: space-between;
-  width: 78%;
+  max-width: 1070px;
   padding-top: 25px;
 
 }
@@ -731,11 +735,167 @@ padding: 18px;
     .btn_icon, .mobile{
       display: block;
     }
+    .btn_icon{
+      /* right: 10px; */
+      top: -47px;
+    }
     .mobile .listt{
-      background-color: #FFFFFF;
+      /* background-color: #FFFFFF; */
       margin: auto;
     }
+    /* ====================================================================== */
+    .containerr h1, .about-heading h1, .heading-, .heading- h1, .offer h2{
+     font-size:  22px;
+    }
+    .containerr p, .flex2 h2, .flex1 h2,.about-end, .about-heading p,  .bb div h4, .contentt p,  .per h4, .contenttt p, .open_qus p, .offer, .ccard div p{
+     font-size:  12px;
+    }
+     .open_qus .qus h4, .flex2 h1{
+      font-size: 14px;
+     }
+    /* ====================================================================== */
+    .frame-top-left{
+      transform: translate(-40%, -255%);
+    }
+    .container-1{
+      margin-top: -91px;
+    }
+    .container-1,#sire,.contactus, .offers, .flexnewsletter,.bx, .container, .cards{
+      flex-direction: column;
+      align-items: center;
+    }
+    .box{
+      max-width: 445px;
+     height: auto;
+      margin-top: 118px 
+    }
+    .box img{
+      margin-top: -88px;
+
+    }
+    .contactus_form,.flex2,.footer-, .foter, .banner{
+      flex-wrap: wrap;
+    }
+    .qute-h3 , .heading-sire, .contentt h3, .contenttt h3, .qus h4, .ccard div div h4{
+      font-size: 16px;
+    }
+    .qute-bottom {
+      display: flex;
+      align-items: flex-end;
+    }
+    .flex2, .footer-, .flex2 div, .bx{
+      display: flex;
+    }
+    .flex2{
+      align-items: center;
+      width: 100%;
+      margin: 0px 3px;
+    }
+    .frameCircle, .elicp_left, .footer- .h22, .subscribe p, .frameCircle{
+      display: none;
+    }
+    .footer-, .flex2 div, .foter, .card{
+      margin: 8px;
+    }
+    .insert_email input{
+      width: 327px;
+      height: 55px;
+    }
+    .mail_box{
+      bottom:  22%;
+      right: 4.5%;
+    } 
+    
+  .about-end, .feature-one, .contentt p{
+    margin: 0%;
   }
+  #sire{
+    margin: 58px  0px;
+  }
+   #sire .box-1, .box-2{
+width: 282px;
+   }
+   .about-hr{
+    width: 72px;
+   }
+     .image-0{
+  transform: translate(-40%, -38%);
+}
+
+.image-3{
+  left: 88px;
+  top: 99px;
+}
+.image-2{
+  top: 11px;
+}
+  .image-1, .image-3, .image-2{
+    width: 172px;
+  }
+  .image-0, .image-4{
+    width: 45px;
+  }
+  .image-4{
+    top: 88px;
+    left: 228px;
+  }
+
+  .image-1{
+    left: 0px;
+    top: 2px;
+  }
+  #feature{
+    margin-top: 78px;
+  }
+  .feature-one{
+    height: auto;
+  }
+  .contentt {
+    margin: 1px 0px;
+  }
+  .benefit{
+    margin: 38px 0px;
+  }
+  .box-feature1, .box-feature2{
+    padding: 0px 8px;
+  }
+  .card{
+    padding: 0%;
+  }
+  .containerr{
+    margin-top: 76px;
+  }
+  .box-2 .contentt{
+margin-top: 199px;
+  }
+  .box-2 hr{
+    margin: 8px 130px 8px 0px ;;
+  }
+  .bbbb{
+    top: 50%;
+    left: -3.5%;
+  margin-right: 12px;
+  }
+  .b{
+    margin: 8px 0px;
+  }
+  .offer-img{
+    width:369px ;
+  }
+  .contactus_form input{
+    min-width: 245px;
+  }
+  .qus{
+    width: 100%;;
+  }
+  #myDiv .logo-header{
+    text-align: right;
+  }
+  .socials img{
+    padding: 11px;
+  }
+  }
+
  
   
 
