--- a/src/index.css
+++ b/src/index.css
@@ -793,7 +793,7 @@ padding: 18px;
       width: 100%;
       margin: 0px 3px;
     }
-    .frameCircle, .elicp_left, .footer- .h22, .subscribe p, .frameCircle{
+    .frameCircle, .elicp_left, .footer- .h22, .subscribe p, .frameCircle, .elicp img{
       display: none;
     }
     .footer-, .flex2 div, .foter, .card{
